Замокировал SocketIO в тестах. Добавил всюду аннотацию @AllArgsConstructor. Заменил @Value на @Properties (для обеспечения горячей загрузки).