@@ -19,6 +19,7 @@ import com.skillbox.socialnetwork.repository.FriendshipRepository;
 import com.skillbox.socialnetwork.repository.FriendshipStatusRepository;
 import com.skillbox.socialnetwork.repository.PersonRepository;
 import io.jsonwebtoken.lang.Strings;
+import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -41,23 +42,13 @@ import static java.time.ZoneOffset.UTC;
 
 @Slf4j
 @Service
-
+@AllArgsConstructor
 public class FriendshipService {
     private final PersonRepository personRepository;
     private final FriendshipRepository friendshipRepository;
     private final PersonService personService;
     private final FriendshipStatusRepository friendshipStatusRepository;
     private final NotificationService notificationService;
-
-    public FriendshipService(PersonRepository personRepository, FriendshipRepository friendshipRepository,
-                             PersonService personService, FriendshipStatusRepository friendshipStatusRepository,
-                             NotificationService notificationService) {
-        this.personRepository = personRepository;
-        this.friendshipRepository = friendshipRepository;
-        this.personService = personService;
-        this.friendshipStatusRepository = friendshipStatusRepository;
-        this.notificationService = notificationService;
-    }
 
     public ListResponse<AuthData> getFriends(String name, int offset, int itemPerPage, Principal principal) {
         log.debug("метод получения друзей");
@@ -170,7 +161,7 @@ public class FriendshipService {
             Pageable additionalPageable = PageRequest.of(0, (int) (10 - personFirstPage.getTotalElements()));
             personFirstPage.get().forEach(p -> blockers.add(p.getId()));
             Page<Person> additionalPersonPage = get10Users(person.getEMail(), additionalPageable, blockers);
-            List<Person> additionalPersonList = additionalPersonPage.stream().collect(Collectors.toList());
+            List<Person> additionalPersonList = additionalPersonPage.stream().toList();
             List<Person> personFirstList = personFirstPage.stream().collect(Collectors.toList());
             personFirstList.addAll(additionalPersonList);
             personFirstPage = new PageImpl<>(personFirstList, pageable, personFirstList.size());
